mobile nav overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -322,20 +322,19 @@ body {
   grid-template-columns: 1fr 2fr auto;
   column-gap: 3.8rem;
   row-gap: 1.8rem;
-  border-bottom: 1px solid rgba(241, 241, 241, 0.49);
-  transition: all 0.5s ease-out; }
+  border-bottom: 1px solid rgba(241, 241, 241, 0.19); }
   .item:first-child {
-    border-top: 1px solid rgba(241, 241, 241, 0.49); }
+    border-top: 1px solid rgba(241, 241, 241, 0.19); }
 
 .hidden-box {
   grid-column: 2;
-  display: none;
-  transition: all 1s ease-in-out;
-  overflow-y: auto;
-  /* Added overflow property */ }
+  opacity: 0;
+  height: 0;
+  pointer-events: none;
+  transition: all 0.5s ease-out; }
   .hidden-box p,
   .hidden-box ul li {
-    font-size: 16px;
+    font-size: 1.8rem;
     color: #B2B2B2;
     font-weight: 300; }
 
@@ -380,7 +379,9 @@ body {
   fill: #FAFD5D; }
 
 .active .hidden-box {
-  display: block;
+  opacity: 1;
+  height: 100%;
+  pointer-events: all;
   /*  max-height: 1000px; /* Adjust the value based on your content height  */ }
 
 .tabs-container {
@@ -546,7 +547,7 @@ body {
 
 .header {
   max-width: 100%;
-  padding: 4rem 0;
+  padding: 5rem 11rem;
   transition: all 0.4s; }
   .header--animated {
     animation: moveInTop 0.3s ease-out 0.75s;
@@ -709,12 +710,15 @@ body {
     padding-top: 5rem; }
   .header {
     margin-bottom: 10rem; }
+  .header .container {
+    margin: 0;
+    padding: 0;
+    width: 0; }
   .navigation {
     background-color: rgba(0, 0, 0, 0.98);
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
     height: 100vh;
     transform: translateX(100%);
     /*  backdrop-filter: blur(10px);
@@ -723,7 +727,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all 0.5s ease-in;
+    transition: all 0.3s;
     /* Hide navigation */
     /* Allows NO transitions at all */
     /* display: none; */
@@ -737,6 +741,7 @@ body {
       flex-direction: column;
       gap: 4.8rem; }
   .nav-open .navigation {
+    width: 100%;
     opacity: 1;
     pointer-events: auto;
     visibility: visible;
@@ -746,6 +751,10 @@ body {
     display: block; }
   .nav-open .icon-mobile-nav[name='menu'] {
     display: none; }
+  .nav__link {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis; }
   .nav__link:link,
   .nav__link:visited {
     font-size: 3rem; }
