--- a/sass/components/_accordian.scss
+++ b/sass/components/_accordian.scss
@@ -9,21 +9,22 @@
   grid-template-columns: 1fr 2fr auto;
   column-gap: 3.8rem;
   row-gap: 1.8rem;
-  border-bottom: 1px solid rgba(241, 241, 241, 0.49);
-  transition: all 0.5s ease-out;
+  border-bottom: 1px solid rgba(241, 241, 241, 0.19);
+
   &:first-child {
-    border-top: 1px solid rgba(241, 241, 241, 0.49);
+    border-top: 1px solid rgba(241, 241, 241, 0.19);
   }
 }
 
 .hidden-box {
   grid-column: 2;
-  display: none;
-  transition: all 1s ease-in-out;
-  overflow-y: auto; /* Added overflow property */
+  opacity: 0;
+  height: 0;
+  pointer-events: none;
+  transition: all 0.5s ease-out;
   p,
   ul li {
-    font-size: $default-font-size;
+    font-size: 1.8rem;
     color: $color-grey-light-2;
     font-weight: 300;
   }
@@ -73,6 +74,8 @@
   fill: $color-secondary;
 }
 .active .hidden-box {
-  display: block;
+  opacity: 1;
+  height: 100%;
+  pointer-events: all;
   /*  max-height: 1000px; /* Adjust the value based on your content height  */
 }
