--- a/sass/layout/_queries.scss
+++ b/sass/layout/_queries.scss
@@ -98,13 +98,16 @@
   .header {
     margin-bottom: 10rem;
   }
-
+  .header .container {
+    margin: 0;
+    padding: 0;
+    width: 0;
+  }
   .navigation {
     background-color: rgba(0, 0, 0, 0.98);
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
     height: 100vh;
     transform: translateX(100%);
     /*  backdrop-filter: blur(10px);
@@ -113,7 +116,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all 0.5s ease-in;
+    transition: all 0.3s ;
 
     /* Hide navigation */
     /* Allows NO transitions at all */
@@ -133,6 +136,7 @@
     }
   }
   .nav-open .navigation {
+    width: 100%;
     opacity: 1;
     pointer-events: auto;
     visibility: visible;
@@ -147,7 +151,11 @@
   .nav-open .icon-mobile-nav[name='menu'] {
     display: none;
   }
-
+  .nav__link {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
   .nav__link:link,
   .nav__link:visited {
     font-size: 3rem;
